# cli-summarizer

./: .gitignore  LICENSE  README.md  pyproject.toml  test1.txt
cli_summarizer/: llm.py  main.py  rest.py
